change some text and css, fix footer not showing

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -138,7 +138,7 @@
 
 .span-a{
   position:absolute;
-  left:29%;
+  left:30%;
 }
 
 .span-short-description{
